# sparsion-runtime

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: clock.rs  decay.rs  error.rs  lib.rs  policy.rs  salience.rs  traits.rs
crates/runtime-ffi/: Cargo.toml
crates/runtime-ffi/src/: lib.rs
crates/runtime-sqlite/: Cargo.toml
crates/runtime-sqlite/src/: lib.rs  retriever.rs  runtime.rs  store.rs
crates/runtime-sqlite/tests/: integration.rs  scale.rs
crates/runtime-types/: Cargo.toml
crates/runtime-types/src/: lib.rs
docs/: launch_post.md  reddit_posts.md
examples/basic_agent/: Cargo.toml
examples/basic_agent/src/: main.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
examples/project_memory_demo/: Cargo.toml
examples/project_memory_demo/src/: main.rs
python/: README.md  pyproject.toml  test_e2e.py  test_langchain.py
python/sparsion/: __init__.py  cli.py  dashboard.py  langchain.py  server.py
