[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sparsion"
version = "0.1.0"
description = "Temporal memory runtime for AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
manifest-path = "../crates/runtime-ffi/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "sparsion.sparsion_runtime"
python-source = "."
