[package]
name = "sparsion-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for Sparsion Runtime"

[lib]
name = "sparsion_runtime"
crate-type = ["cdylib"]

[dependencies]
sparsion-types.workspace = true
sparsion-core.workspace = true
sparsion-sqlite.workspace = true
pyo3.workspace = true
uuid.workspace = true
chrono.workspace = true
